kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.service.expose: management.project.localhost,app.project.localhost
    kompose.service.healthhcheck.liveness.http_get_path: /health
    kompose.service.healthhcheck.liveness.http_get_port: "9990"
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.service.expose: management.project.localhost,app.project.localhost
        kompose.service.healthhcheck.liveness.http_get_path: /health
        kompose.service.healthhcheck.liveness.http_get_port: "9990"
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/jboss-setup-default: "true"
        io.kompose.service: app
    spec:
      containers:
        - image: project-repo/jboss:latest
          name: app
          ports:
            - containerPort: 9990
            - containerPort: 8080
          resources: {}
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
status: {}
