kubernetes/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.service.expose: db.project.localhost
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.service.expose: db.project.localhost
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/jboss-setup-default: "true"
        io.kompose.service: database
    spec:
      containers:
        - env:
            - name: ENABLE_ARCHIVELOG
              value: "false"
            - name: NLS_LANG
              value: .AL32UTF8
            - name: ORACLE_CHARACTERSET
              value: AL32UTF8
            - name: ORACLE_EDITION
              value: enterprise
            - name: ORACLE_PDB
              value: MYPDB
            - name: ORACLE_PWD
              value: Manager1
            - name: ORACLE_SID
              value: MYCDB
          image: project-repo/db:latest
          name: database
          ports:
            - containerPort: 1521
            - containerPort: 5500
          resources:
            limits:
              cpu: "1"
              memory: "6442450944"
            requests:
              cpu: "1"
              memory: "5368709120"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /opt/oracle/oradata
              name: dbdata
      restartPolicy: Always
      volumes:
        - name: dbdata
          persistentVolumeClaim:
            claimName: dbdata
status: {}
