kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.service.expose: management.project.localhost,app.project.localhost
    kompose.service.healthhcheck.liveness.http_get_path: /health
    kompose.service.healthhcheck.liveness.http_get_port: "9990"
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  ports:
    - name: "9990"
      port: 9990
      targetPort: 9990
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: app
status:
  loadBalancer: {}
