kubernetes/database-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.service.expose: db.project.localhost
    kompose.version: 1.28.0 (c4137012e)
    kubernetes.io/ingress.class: "nginx"
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: database
spec:
  rules:
    - host: db.project.localhost
      http:
        paths:
          - backend:
              service:
                name: database
                port:
                  number: 6000
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
