kubernetes/sample-helm-chart-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: jboss-setup
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/jboss-setup-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/jboss-setup-default: "true"
